fix pageicon smaller when large text in inline help

--- a/client/blocks/inline-help/style.scss
+++ b/client/blocks/inline-help/style.scss
@@ -318,6 +318,10 @@
 
 .inline-help__results-cell {
 	width: 100%;
+
+	svg {
+		overflow: visible;
+	}
 }
 
 .inline-help__results-item {
